[gd_scene load_steps=3 format=2]

[ext_resource path="res://Square.gd" type="Script" id=1]
[ext_resource path="res://piece/move-circle.tres" type="Texture" id=2]

[node name="Square" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1372.0
margin_bottom = -750.0
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MoveIndicator" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PremoveIndicator" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Circle" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[connection signal="focus_exited" from="." to="." method="_focus_exited"]
